--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "axios": "^1.8.3",
     "dotenv": "^16.4.7",
+    "emailssary-sdk": "^1.2.0",
     "mailparser": "^3.7.2",
     "smtp-server": "^3.13.6"
   },
